# hal-sim

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish-dry-run.yml  publish.yml
src/: adc.rs  display.rs  dto.rs  gpio.rs  io.rs  lib.rs  main.rs  peripherals.rs  ui.rs  web.rs  ws.rs
src/dto/: display.rs  gpio.rs  web.rs
src/ui/: displays.rs  edgeframe_middleware.rs  fb.rs  middleware.rs  pins.rs  state.rs  yewdux_middleware.rs
